added substring to results

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -321,156 +321,6 @@ jobs:
         run: echo "${{ matrix.customer_root }}" > /tmp/terraform.results
       
       # Execute terraform commands storage
-      - name: "Terraform apply on identity workspace"
-        if: steps.tf_validate_identity.outcome == 'success' && steps.find_affected_workspaces.outputs.identity && env.HAS_APPLY_PERMISSION && steps.determine_command.outputs.command == 'apply' 
-        id: tf_apply_identity
-        working-directory: ./${{ matrix.customer_root }}/identity 
-        continue-on-error: true    
-        run: |
-          terraform apply -auto-approve -no-color
-          
-      - name: "Process terraform outputs"
-        env:
-          VALIDATE: ${{ steps.tf_validate_identity.outputs.stdout }} ${{ steps.tf_validate_identity.outputs.stderr }}
-          TF_RESULTS: ${{ steps.tf_plan_identity.outputs.stdout }} ${{ steps.tf_plan_identity.outputs.stderr }} ${{ steps.tf_apply_identity.outputs.stdout }} ${{ steps.tf_apply_identity.outputs.stderr }}
-          VALIDATE_OUTCOME: ${{ steps.tf_validate_identity.outcome }}
-          PLAN_OUTCOME: ${{ steps.tf_plan_identity.outcome }}
-          APPLY_OUTCOME: ${{ steps.tf_apply_identity.outcome }}
-        continue-on-error: true 
-        uses: actions/github-script@v3
-        with: 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            var fs = require('fs');
-            const regex = /(No Change|(Plan:|Apply:) (\d to add, \d to change, \d to destroy)?)/g;
-            var output = '' + process.env.VALIDATE + process.env.TF_RESULTS
-            if (output.length > 0) {
-              let match = regex.exec(output);
-              var add = (match !== null) ? match[1] : "Failure"
-              fs.appendFile('/tmp/terraform.results', "identity workspace => " + add, function (err) {
-                if (err) throw err;
-              });
-            }
-            else {
-              fs.appendFile('/tmp/terraform.results', 'identity workspace => Not executed', function(err) {
-                if (err) throw err;
-              });
-            }
-            var command = 'Validate Results';
-            var results = process.env.VALIDATE;
-            if (process.env.PLAN_OUTCOME != 'skipped') { command = 'Plan Results'; results = process.env.TF_RESULTS }
-            if (process.env.APPLY_OUTCOME != 'skipped') { command = 'Apply Results'; results = process.env.TF_RESULTS }
-            if (process.env.VALIDATE_OUTCOME != 'skipped') {
-              const output = `### Customer Workspace: \`${{ matrix.customer_root }}/identity\`
-              Terraform Validation: ${process.env.VALIDATE_OUTCOME}
-              Terraform Plan: ${process.env.PLAN_OUTCOME}
-              Terraform Apply: ${process.env.APPLY_OUTCOME}
-
-              <details><summary>Show ${command}</summary>
-
-              \`\`\`\n
-              ${results}
-              \`\`\`
-              
-              </details>
-
-              *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.customer_root }}/identity\`, Workflow: \`${{ github.workflow }}\`*`;
-              github.issues.createComment({
-                issue_number: process.env.PR_NUMBER,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              })
-            }
-
-      # Execute terraform commands network
-      - name: Terraform init on network workspace
-        if: (steps.find_affected_workspaces.outputs.network)
-        id: tf_init_network
-        working-directory: ./${{ matrix.customer_root }}/network
-        continue-on-error: true    
-        run: |
-          terraform init 
-
-      - name: Terraform validate on network workspace
-        if: (steps.find_affected_workspaces.outputs.network)
-        id: tf_validate_network
-        working-directory: ./${{ matrix.customer_root }}/network
-        continue-on-error: true    
-        run: |
-          terraform validate -no-color
-
-      - name: "Terraform plan on network workspace"
-        if: steps.tf_validate_network.outcome == 'success' && steps.find_affected_workspaces.outputs.network && steps.determine_command.outputs.command == 'plan'
-        id: tf_plan_network
-        working-directory: ./${{ matrix.customer_root }}/network 
-        continue-on-error: true    
-        run: |
-          terraform plan -no-color 
-
-      - name: "Terraform apply on network workspace"
-        if: steps.tf_validate_network.outcome == 'success' && steps.find_affected_workspaces.outputs.network && env.HAS_APPLY_PERMISSION && steps.determine_command.outputs.command == 'apply' 
-        id: tf_apply_network
-        working-directory: ./${{ matrix.customer_root }}/network 
-        continue-on-error: true    
-        run: |
-          terraform apply -auto-approve -no-color
-          
-      - name: "Process terraform outputs"
-        env:
-          VALIDATE: ${{ steps.tf_validate_network.outputs.stdout }} ${{ steps.tf_validate_network.outputs.stderr }}
-          TF_RESULTS: ${{ steps.tf_plan_network.outputs.stdout }} ${{ steps.tf_plan_network.outputs.stderr }} ${{ steps.tf_apply_network.outputs.stdout }} ${{ steps.tf_apply_network.outputs.stderr }}
-          VALIDATE_OUTCOME: ${{ steps.tf_validate_network.outcome }}
-          PLAN_OUTCOME: ${{ steps.tf_plan_network.outcome }}
-          APPLY_OUTCOME: ${{ steps.tf_apply_network.outcome }}
-        continue-on-error: true 
-        uses: actions/github-script@v3
-        with: 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            var fs = require('fs');
-            const regex = /(No Change|(Plan:|Apply:) (\d to add, \d to change, \d to destroy)?)/g;
-            var output = '' + process.env.VALIDATE + process.env.TF_RESULTS
-            if (output.length > 0) {
-              let match = regex.exec(output);
-              var add = (match !== null) ? match[1] : "Failure"
-              fs.appendFile('/tmp/terraform.results', "network workspace => " + add, function (err) {
-                if (err) throw err;
-              });
-            }
-            else {
-              fs.appendFile('/tmp/terraform.results', 'network workspace => Not executed', function(err) {
-                if (err) throw err;
-              });
-            }
-            var command = 'Validate Results';
-            var results = process.env.VALIDATE;
-            if (process.env.PLAN_OUTCOME != 'skipped') { command = 'Plan Results'; results = process.env.TF_RESULTS }
-            if (process.env.APPLY_OUTCOME != 'skipped') { command = 'Apply Results'; results = process.env.TF_RESULTS }
-            if (process.env.VALIDATE_OUTCOME != 'skipped') {
-              const output = `### Customer Workspace: \`${{ matrix.customer_root }}/network\`
-              Terraform Validation: ${process.env.VALIDATE_OUTCOME}
-              Terraform Plan: ${process.env.PLAN_OUTCOME}
-              Terraform Apply: ${process.env.APPLY_OUTCOME}
-
-              <details><summary>Show ${command}</summary>
-
-              \`\`\`\n
-              ${results}
-              \`\`\`
-              
-              </details>
-
-              *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.customer_root }}/network\`, Workflow: \`${{ github.workflow }}\`*`;
-              github.issues.createComment({
-                issue_number: process.env.PR_NUMBER,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              })
-            }
-
-      # Execute terraform commands storage
       - name: Terraform init on storage workspace
         if: (steps.find_affected_workspaces.outputs.storage)
         id: tf_init_storage
@@ -504,6 +354,7 @@ jobs:
           terraform apply -auto-approve -no-color
           
       - name: "Process terraform outputs"
+        #if: steps.find_affected_workspaces.outputs.storage
         env:
           VALIDATE: ${{ steps.tf_validate_storage.outputs.stdout }} ${{ steps.tf_validate_storage.outputs.stderr }}
           TF_RESULTS: ${{ steps.tf_plan_storage.outputs.stdout }} ${{ steps.tf_plan_storage.outputs.stderr }} ${{ steps.tf_apply_storage.outputs.stdout }} ${{ steps.tf_apply_storage.outputs.stderr }}
@@ -543,186 +394,12 @@ jobs:
               <details><summary>Show ${command}</summary>
 
               \`\`\`\n
-              ${results}
+              ${results.substring(0,65000)}
               \`\`\`
               
               </details>
 
-              *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.customer_root }}/storage\`, Workflow: \`${{ github.workflow }}\`*`;
-              github.issues.createComment({
-                issue_number: process.env.PR_NUMBER,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              })
-            }
-
-      # Execute terraform commands security
-      - name: Terraform init on security workspace
-        if: (steps.find_affected_workspaces.outputs.security)
-        id: tf_init_security
-        working-directory: ./${{ matrix.customer_root }}/security
-        continue-on-error: true    
-        run: |
-          terraform init 
-
-      - name: Terraform validate on security workspace
-        if: (steps.find_affected_workspaces.outputs.security)
-        id: tf_validate_security
-        working-directory: ./${{ matrix.customer_root }}/security
-        continue-on-error: true    
-        run: |
-          terraform validate -no-color
-
-      - name: "Terraform plan on security workspace"
-        if: steps.tf_validate_security.outcome == 'success' && steps.find_affected_workspaces.outputs.security && steps.determine_command.outputs.command == 'plan'
-        id: tf_plan_security
-        working-directory: ./${{ matrix.customer_root }}/security 
-        continue-on-error: true    
-        run: |
-          terraform plan -no-color 
-
-      - name: "Terraform apply on security workspace"
-        if: steps.tf_validate_security.outcome == 'success' && steps.find_affected_workspaces.outputs.security && env.HAS_APPLY_PERMISSION && steps.determine_command.outputs.command == 'apply' 
-        id: tf_apply_security
-        working-directory: ./${{ matrix.customer_root }}/security 
-        continue-on-error: true    
-        run: |
-          terraform apply -auto-approve -no-color
-          
-      - name: "Process terraform outputs"
-        env:
-          VALIDATE: ${{ steps.tf_validate_security.outputs.stdout }} ${{ steps.tf_validate_security.outputs.stderr }}
-          TF_RESULTS: ${{ steps.tf_plan_security.outputs.stdout }} ${{ steps.tf_plan_security.outputs.stderr }} ${{ steps.tf_apply_security.outputs.stdout }} ${{ steps.tf_apply_security.outputs.stderr }}
-          VALIDATE_OUTCOME: ${{ steps.tf_validate_security.outcome }}
-          PLAN_OUTCOME: ${{ steps.tf_plan_security.outcome }}
-          APPLY_OUTCOME: ${{ steps.tf_apply_security.outcome }}
-        continue-on-error: true 
-        uses: actions/github-script@v3
-        with: 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            var fs = require('fs');
-            const regex = /(No Change|(Plan:|Apply:) (\d to add, \d to change, \d to destroy)?)/g;
-            var output = '' + process.env.VALIDATE + process.env.TF_RESULTS
-            if (output.length > 0) {
-              let match = regex.exec(output);
-              var add = (match !== null) ? match[1] : "Failure"
-              fs.appendFile('/tmp/terraform.results', "security workspace => " + add, function (err) {
-                if (err) throw err;
-              });
-            }
-            else {
-              fs.appendFile('/tmp/terraform.results', 'security workspace => Not executed', function(err) {
-                if (err) throw err;
-              });
-            }
-            var command = 'Validate Results';
-            var results = process.env.VALIDATE;
-            if (process.env.PLAN_OUTCOME != 'skipped') { command = 'Plan Results'; results = process.env.TF_RESULTS }
-            if (process.env.APPLY_OUTCOME != 'skipped') { command = 'Apply Results'; results = process.env.TF_RESULTS }
-            if (process.env.VALIDATE_OUTCOME != 'skipped') {
-              const output = `### Customer Workspace: \`${{ matrix.customer_root }}/security\`
-              Terraform Validation: ${process.env.VALIDATE_OUTCOME}
-              Terraform Plan: ${process.env.PLAN_OUTCOME}
-              Terraform Apply: ${process.env.APPLY_OUTCOME}
-
-              <details><summary>Show ${command}</summary>
-
-              \`\`\`\n
-              ${results}
-              \`\`\`
-              
-              </details>
-
-              *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.customer_root }}/security\`, Workflow: \`${{ github.workflow }}\`*`;
-              github.issues.createComment({
-                issue_number: process.env.PR_NUMBER,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              })
-            }
-
-      # Execute terraform commands operations
-      - name: Terraform init on operations workspace
-        if: (steps.find_affected_workspaces.outputs.operations)
-        id: tf_init_operations
-        working-directory: ./${{ matrix.customer_root }}/operations
-        continue-on-error: true    
-        run: |
-          terraform init 
-
-      - name: Terraform validate on operations workspace
-        if: (steps.find_affected_workspaces.outputs.operations)
-        id: tf_validate_operations
-        working-directory: ./${{ matrix.customer_root }}/operations
-        continue-on-error: true    
-        run: |
-          terraform validate -no-color
-
-      - name: "Terraform plan on operations workspace"
-        if: steps.tf_validate_operations.outcome == 'success' && steps.find_affected_workspaces.outputs.operations && steps.determine_command.outputs.command == 'plan'
-        id: tf_plan_operations
-        working-directory: ./${{ matrix.customer_root }}/operations 
-        continue-on-error: true    
-        run: |
-          terraform plan -no-color 
-
-      - name: "Terraform apply on operations workspace"
-        if: steps.tf_validate_operations.outcome == 'success' && steps.find_affected_workspaces.outputs.operations && env.HAS_APPLY_PERMISSION && steps.determine_command.outputs.command == 'apply' 
-        id: tf_apply_operations
-        working-directory: ./${{ matrix.customer_root }}/operations 
-        continue-on-error: true    
-        run: |
-          terraform apply -auto-approve -no-color
-          
-      - name: "Process terraform outputs"
-        env:
-          VALIDATE: ${{ steps.tf_validate_operations.outputs.stdout }} ${{ steps.tf_validate_operations.outputs.stderr }}
-          TF_RESULTS: ${{ steps.tf_plan_operations.outputs.stdout }} ${{ steps.tf_plan_operations.outputs.stderr }} ${{ steps.tf_apply_operations.outputs.stdout }} ${{ steps.tf_apply_operations.outputs.stderr }}
-          VALIDATE_OUTCOME: ${{ steps.tf_validate_operations.outcome }}
-          PLAN_OUTCOME: ${{ steps.tf_plan_operations.outcome }}
-          APPLY_OUTCOME: ${{ steps.tf_apply_operations.outcome }}
-        continue-on-error: true 
-        uses: actions/github-script@v3
-        with: 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            var fs = require('fs');
-            const regex = /(No Change|(Plan:|Apply:) (\d to add, \d to change, \d to destroy)?)/g;
-            var output = '' + process.env.VALIDATE + process.env.TF_RESULTS
-            if (output.length > 0) {
-              let match = regex.exec(output);
-              var add = (match !== null) ? match[1] : "Failure"
-              fs.appendFile('/tmp/terraform.results', "operations workspace => " + add, function (err) {
-                if (err) throw err;
-              });
-            }
-            else {
-              fs.appendFile('/tmp/terraform.results', 'operations workspace => Not executed', function(err) {
-                if (err) throw err;
-              });
-            }
-            var command = 'Validate Results';
-            var results = process.env.VALIDATE;
-            if (process.env.PLAN_OUTCOME != 'skipped') { command = 'Plan Results'; results = process.env.TF_RESULTS }
-            if (process.env.APPLY_OUTCOME != 'skipped') { command = 'Apply Results'; results = process.env.TF_RESULTS }
-            if (process.env.VALIDATE_OUTCOME != 'skipped') {
-              const output = `### Customer Workspace: \`${{ matrix.customer_root }}/operations\`
-              Terraform Validation: ${process.env.VALIDATE_OUTCOME}
-              Terraform Plan: ${process.env.PLAN_OUTCOME}
-              Terraform Apply: ${process.env.APPLY_OUTCOME}
-
-              <details><summary>Show ${command}</summary>
-
-              \`\`\`\n
-              ${results}
-              \`\`\`
-              
-              </details>
-
-              *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.customer_root }}/operations\`, Workflow: \`${{ github.workflow }}\`*`;
+              *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.terraform_roots }}\`, Workflow: \`${{ github.workflow }}\`*`;
               github.issues.createComment({
                 issue_number: process.env.PR_NUMBER,
                 owner: context.repo.owner,
