output github context

--- a/.github/workflows/workflow_caller.yml
+++ b/.github/workflows/workflow_caller.yml
@@ -5,4 +5,5 @@ jobs:
   caller1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo 'does nothing'
+      - run: |
+        echo ${{ github }}
