--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -26,7 +26,7 @@ jobs:
             let { data: joblist } = await github.actions.listJobsForWorkflowRun({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              run_id: {{ github.run_id }}
+              run_id: ${{ github.run_id }}
             });
             console.log joblist.toString()
 
