--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -28,5 +28,5 @@ jobs:
               repo: context.repo.repo,
               run_id: ${{ github.run_id }}
             });
-            console.log(joblist.toString());
+            console.log(JSON.stringify(joblist));
 
