--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -15,7 +15,7 @@ jobs:
   matrix_job:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 1
+      max-parallel: ${{ fromJSON(github.event.inputs.MAX_PARALLEL) }}
       matrix: 
         job_name: ['one', 'two', 'three', 'four', 'five']
     steps:
